tests/ui/async-await/issue-71137.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-71137.rs:22:14
   |
LL |   fake_spawn(wrong_mutex());
   |              ^^^^^^^^^^^^^ future returned by `wrong_mutex` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, i32>`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-71137.rs:14:26
   |
LL |     let mut guard = m.lock().unwrap();
   |         --------- has type `std::sync::MutexGuard<'_, i32>` which is not `Send`
LL |     (async { "right"; }).await;
   |                          ^^^^^ await occurs here, with `mut guard` maybe used later
note: required by a bound in `fake_spawn`
  --> $DIR/issue-71137.rs:8:27
   |
LL | fn fake_spawn<F: Future + Send + 'static>(f: F) { }
   |                           ^^^^ required by this bound in `fake_spawn`

error: aborting due to 1 previous error

